# ctemplate

./: .gitattributes  .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.status  configure  configure.ac  configure.scan
m4/: ac_have_attribute.m4  ac_interlocked_exchange.m4  ac_rwlock.m4  acx_pthread.m4  ax_c___attribute__.m4  compiler_characteristics.m4  google_namespace.m4  namespaces.m4  stl_hash.m4  stl_namespace.m4
src/: config.h  config.h.in  indented_writer.h  template_modifiers_internal.h
src/base/: arena-inl.h  arena.h  fileutil.h  macros.h  manual_constructor.h  mutex.h  small_map.h  thread_annotations.h  util.h
src/ctemplate/: .gitignore  template_dictionary.h
src/htmlparser/: htmlparser.h  htmlparser_cpp.h  jsparser.h  statemachine.h
src/tests/: config_for_unittests.h  template_test_util.h
src/windows/: port.h
